Changelog
=========

4.3.3 (unreleased)
------------------

- Nothing changed yet.


4.3.2 (2016-01-08)
------------------

- Fix default value of image2_alignClasses (plus upgrade step)
  [gotcha]

- Add option to not minify JS to build-ckeditor scripts
  [gotcha]

- Fix build-ckeditor scripts to keep option to not use 
  image2 plugin
  [gotcha]

- Update ckeditor accordingly
  [gotcha]

- Check validity of image2_alignClasses
  [gotcha]


4.3.1.1 (2015-01-05)
--------------------

- Re-publish egg with generated static resources
  [ebrehault]


4.3.1 (2015-12-14)
------------------

- Update to CKeditor 4.5.6
  [gotcha]

- Add some robot tests
  [spreverde, gotcha]

- Add defaultTableWidth option to control panel to set the default table width in the table dialog window.


4.3.0b2 (2014-06-19)
--------------------

- Fix javascript order though GS.
  [montypie]


4.3.0b1 (2014-06-19)
--------------------

- Add image2 plugin and its dependencies.
  [gotcha]

- Add image2_alignClasses and image2_captionedClass setting to setup
  image2 plugin.
  [gotcha]

- Updated to CKeditor 4.4.1.
  [gotcha]

- Add removePlugins option to control panel to allow to deactivate plugins.
  [gotcha]

4.2.0 (2014-06-05)
------------------

- Show actual url in link dialog besides resolveuid.
  [gotcha]


4.1.1 (2014-03-27)
------------------

- Fix upgrade steps to avoid overwriting custom configuration.
  [gotcha]

- Updated to CKeditor 4.3.4
  [gotcha]


4.1 (2014-03-27)
----------------

- Expand setup of Advanced Content filter (ACF).
  [spereverde, gotcha]


4.0.0 (2014-02-05)
------------------

- Updated to CKeditor 4.3.2
  [gotcha]

- Add extraAllowedContent option to setup filter rules.
  [gotcha]

- Backward compatibility of toolbar settings
  [gotcha]

- Moved to CKeditor 4.2.3
  [gbastien]


3.6.12 (2013-09-05)
-------------------

- Make it possible to enable/disable SCAYT by default
  [gbastien]

3.6.11 (2013-05-30)
-------------------
